<resources>
    <string name="app_name">Game Corner</string>
    <string name="game_name">Game Name</string>
    <string name="game_description">Descriptions</string>
    <string name="about">About</string>
    <string name="name">Amar Suhendra</string>
    <string name="email">amarsuhendra2@gmail.com</string>
    <string name="desc">I\'m a student of Syiah Kuala University majoring in Informatics.</string>
    <string name="about_page">About</string>
    <string name="game_system_requirements">System Requirements</string>
    <string name="game_about">About</string>

    <string-array name="game_names_data">
        <item>A Space for the Unbound</item>
        <item>The Witcher 3: Wild Hunt</item>
        <item>Outlast</item>
        <item>DreadOut</item>
        <item>Monster Hunter:World</item>
        <item>Sea of Thieves</item>
        <item>Stardew Valley</item>
        <item>Dying Light</item>
        <item>Stray</item>
        <item>Tom Clancy’s The Division</item>
    </string-array>
    <string-array name="game_descriptions_data">
        <item>A magical adventure about two high school sweethearts set at the end of their school days - and the end of the world. Explore a crumbling town and help friends face their inner demons, which could be the key to stopping reality itself disintegrating. And don’t forget to pet the cats.</item>
        <item>You are Geralt of Rivia, mercenary monster slayer. Before you stands a war-torn, monster-infested continent you can explore at will. Your current contract? Tracking down Ciri — the Child of Prophecy, a living weapon that can alter the shape of the world.</item>
        <item>In the remote mountains of Colorado, horrors wait inside Mount Massive Asylum. A long-abandoned home for the mentally ill, recently re-opened by the “research and charity” branch of the transnational Murkoff Corporation, the asylum has been operating in strict secrecy… until now.</item>
        <item>DreadOut is a third person supernatural horror game where you play as Linda, a high school student trapped in an old abandoned town. Equipped with her trusty smart-phone and an SLR camera, she will battle against terrifying encounters and solve mysterious puzzles which will ultimately determine her fate.</item>
        <item>Welcome to a new world! In Monster Hunter: World, the latest installment in the series, you can enjoy the ultimate hunting experience, using everything at your disposal to hunt monsters in a new world teeming with surprises and excitement.</item>
        <item>Sea of Thieves offers the essential pirate experience, from sailing and fighting to exploring and looting – everything you need to live the pirate life and become a legend in your own right. With no set roles, you have complete freedom to approach the world, and other players, however you choose.</item>
        <item>You\'ve inherited your grandfather\'s old farm plot in Stardew Valley. Armed with hand-me-down tools and a few coins, you set out to begin your new life. Can you learn to live off the land and turn these overgrown fields into a thriving home?</item>
        <item>First-person action survival game set in a post-apocalyptic open world overrun by flesh-hungry zombies. Roam a city devastated by a mysterious virus epidemic. Scavenge for supplies, craft weapons, and face hordes of the infected.</item>
        <item>Lost, alone and separated from family, a stray cat must untangle an ancient mystery to escape a long-forgotten cybercity and find their way home.</item>
        <item>After a deadly pandemic sweeps through New York, it\'s up to Agents to save what remains. Complete missions, explore the Dark Zone, and fight back enemy factions alone or with 3 friends. Experience a full endgame offering you new PvP and PvE modes.</item>
    </string-array>

    <string-array name="game_descriptions_detail">
        <item>OS: Windows 10\n
            Processor: Intel® Core™ i3-6100 Processor or equivalent\n
            Memory: 4 GB RAM\n
            Graphics: GeForce GTX 1050 or equivalent\n
            Storage: 3 GB available space
        </item>
        <item>OS: 64-bit Windows 10/11\n
            Processor: Intel Core i5-7400 / Ryzen 5 1600\n
            Memory: 8 GB RAM\n
            Graphics: Nvidia GTX 1070 / Radeon RX 480\n
            DirectX: Version 12\n
            Storage: 50 GB available space
        </item>
        <item>OS: Windows Vista / 7 / 8 - 64 bits\n
            Processor: 2.8 GHz Quad Core CPU\n
            Memory: 3 GB RAM\n
            Graphics: 1GB NVIDIA GTX 460 / ATI Radeon HD 6850 or better\n
            DirectX: Version 9.0c\n
            Network: Broadband Internet connection\n
            Storage: 5 GB available space\n
            Sound Card: DirectX Compatible
        </item>
        <item>OS: Windows 7 / 8 - 64 bits\n
            Processor: Intel Core i5-2300 or AMD Phenom II X4 940 or better\n
            Memory: 8 GB RAM\n
            Graphics: NVIDIA GeForce GTX 550 or AMD Radeon HD 7750 with 1 GB VRAM or better\n
            DirectX: Version 11\n
            Storage: 10 GB available space\n
            Sound Card: DirectX Compatible
        </item>
        <item>Requires a 64-bit processor and operating system\n
            OS: WINDOWS® 7, 8, 8.1, 10 (64-bit required)\n
            Processor: Intel® Core™ i7 3770 or Core™ i3 8350 or Core™ i3 9350F / AMD Ryzen™ 5 1500X or Ryzen™ 5 3400G\n
            Memory: 8 GB RAM\n
            Graphics: NVIDIA® GeForce® GTX 1060 (VRAM 3GB) or GTX 1650 / AMD Radeon™ RX 480 or RX 570\n
            DirectX: Version 11\n
            Network: Broadband Internet connection\n
            Storage: 52 GB available space\n
            Sound Card: DirectSound (DirectX® 9.0c or later)\n
            Additional Notes: - These specs allow for the game to be played in 1080p/30fps with graphics settings at "High". - 64-bit processor and operating system are required. - Windows 10 (Version 1809 or later) and a 4GB VRAM GPU (graphics board or video card) are required for DirectX 12 API.©CAPCOM CO., LTD. ALL RIGHTS RESERVED.
        </item>
        <item>Requires a 64-bit processor and operating system\n
            OS: Windows 10\n
            Processor: Intel i5 4690 @ 3.5GHz or AMD FX-8150 @ 3.6 GHz\n
            Memory: 8 GB RAM\n
            Graphics: Nvidia GeForce GTX 770 or AMD Radeon R9 380x\n
            DirectX: Version 11\n
            Storage: 50 GB available space
        </item>
        <item>OS: Windows Vista or greater\n
            Processor: 2 Ghz\n
            Memory: 2 GB RAM\n
            Graphics: 256 mb video memory, shader model 3.0+\n
            DirectX: Version 10\n
            Storage: 500 MB available space
        </item>
        <item>OS: Windows® 7 64-bit / Windows® 8 64-bit / Windows® 8.1 64-bit\n
            Processor: Intel® Core™ i5-4670K @3.4 GHz / AMD FX-8350 @4.0 GHz\n
            Memory: 8 GB RAM DDR3\n
            Hard Drive: 40 GB free space\n
            Graphics: NVIDIA® GeForce® GTX 780 / AMD Radeon™ R9 290 (2GB VRAM)\n
            DirectX®: Version 11\n
            Sound: DirectX® compatible\n
            Additional Notes: Laptop versions of graphics cards may work but are NOT officially supported.\n
            Windows-compatible keyboard, mouse, optional controller (Xbox 360 Controller for Windows recommended)
        </item>
        <item>Requires a 64-bit processor and operating system\n
            OS: Windows 10\n
            Processor: Intel Core i5-8400 | AMD Ryzen 5 2600\n
            Memory: 8 GB RAM\n
            Graphics: NVIDIA GeForce GTX 780, 3 GB | AMD Radeon R9 290X, 4 GB\n
            DirectX: Version 12\n
            Storage: 10 GB available space
        </item>
        <item>OS: Windows® 7, Windows 8.1, Windows 10 (64-bit versions only)\n
            Processor: Intel Core i7-3770 | AMD FX-8350, or better\n
            Memory: 8 GB RAM\n
            Graphics: NVIDIA GeForce GTX 970 | AMD Radeon R9 290, or better - See supported List*\n
            DirectX: Version 11\n
            Network: Broadband Internet connection\n
            Storage: 40 GB available space\n
            Additional Notes: Laptop models of these desktop cards may work as long as they are on-par in terms of performance with at least the minimum configuration. For an up-to-date list of supported hardware, please visit the FAQ for this game on our website: http://support.ubi.com.*Supported NVIDIA cards at time of release: GeForce GTX500 series: GeForce GTX560 (2 GB VRAM) or better • GeForce GTX600 series: GeForce GTX660 or better • GeForce GTX700 series: GeForce GTX760 or better • GeForce GTX900 Titan series: GeForce GTX960 or better • Supported AMD cards at time of release: Radeon HD7000 series: Radeon HD7770 (2 GB VRAM) or better • Radeon 200 series: Radeon R7 270 or better • Radeon 300/Fury X series: Radeon R7 370 or better.
        </item>
    </string-array>

    <string-array name="game_image_data">
        <item>@drawable/a_space_for_the_unbound_th</item>
        <item>@drawable/the_witcher_3_th</item>
        <item>@drawable/outlast_th</item>
        <item>@drawable/dreadout_th</item>
        <item>@drawable/mhw_th</item>
        <item>@drawable/sot_th</item>
        <item>@drawable/stardew_th</item>
        <item>@drawable/dying_light_th</item>
        <item>@drawable/stray_th</item>
        <item>@drawable/the_division_th</item>
    </string-array>
</resources>