<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/game_name"
            android:scaleType="fitCenter"
            tools:src="@drawable/stardew_th" />

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/game_name"
            tools:text="@string/game_name" />

        <TextView
            android:id="@+id/tv_game_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/game_about"
            tools:text="@string/game_about" />

        <TextView
            android:id="@+id/tv_game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            tools:text="@string/game_description" />

        <TextView
            android:id="@+id/tv_game_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/game_system_requirements"
            tools:text="@string/game_system_requirements" />

        <TextView
            android:id="@+id/tv_game_detail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            tools:text="OS: Windows® 7, Windows 8.1, Windows 10 (64-bit versions only)\n
            Processor: Intel Core i7-3770 | AMD FX-8350, or better\n
            Memory: 8 GB RAM\n
            Graphics: NVIDIA GeForce GTX 970 | AMD Radeon R9 290, or better - See supported List*\n
            DirectX: Version 11\n
            Network: Broadband Internet connection\n
            Storage: 40 GB available space\n
            Additional Notes: Laptop models of these desktop cards may work as long as they are on-par in terms of performance with at least the minimum configuration. For an up-to-date list of supported hardware, please visit the FAQ for this game on our website: http://support.ubi.com.*Supported NVIDIA cards at time of release: GeForce GTX500 series: GeForce GTX560 (2 GB VRAM) or better • GeForce GTX600 series: GeForce GTX660 or better • GeForce GTX700 series: GeForce GTX760 or better • GeForce GTX900 Titan series: GeForce GTX960 or better • Supported AMD cards at time of release: Radeon HD7000 series: Radeon HD7770 (2 GB VRAM) or better • Radeon 200 series: Radeon R7 270 or better • Radeon 300/Fury X series: Radeon R7 370 or better."
            android:paddingBottom="20dp"
            />

    </LinearLayout>

</ScrollView>